--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,30 @@
 asgiref==3.4.1
 autopep8==1.4.4
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.9
 colorclass==2.2.0
+cryptography==36.0.0
+defusedxml==0.7.1
 Django==4.0
+django-allauth==0.46.0
 docopt==0.6.2
+flake8==4.0.1
 idna==3.3
+mccabe==0.6.1
+oauthlib==3.1.1
 packaging==21.3
 pep8==1.7.1
 pip-upgrader==1.4.15
-pycodestyle==2.5.0
+pycodestyle==2.8.0
+pycparser==2.21
+pyflakes==2.4.0
+PyJWT==2.3.0
 pyparsing==3.0.6
+python3-openid==3.2.0
 pytz==2018.5
 requests==2.26.0
+requests-oauthlib==1.3.0
 sqlparse==0.2.4
 terminaltables==3.1.10
 tzdata==2021.5
